tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BeeBreeding-AAAAAAAAAAAAAAAAAAAAEw==__Ash-AAAAAAAAAAAAAAAAAAAI9A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2292,
  "prerequisites": [
    2163,
    2168
  ],
  "properties": {
    "auto_claim": false,
    "desc": "A bee to make ashes? What insanity is this? At least you can get Large territory from them. You'll need to pay the Nether a visit. Breed them from Clay and Coal.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Ash",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2163,
    2168
  ],
  "rewards": [],
  "tasks": []
}
