tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BeeBreeding-AAAAAAAAAAAAAAAAAAAAEw==__Blooming-AAAAAAAAAAAAAAAAAAAIew==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2171,
  "prerequisites": [
    2164,
    2155
  ],
  "properties": {
    "auto_claim": false,
    "desc": "A Blooming bee will bonemeal nearby saplings. This can definitely help your log and sapling production rate. They also provide the fastest pollination. Breed them from Industrious and Thriving.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Blooming",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2164,
    2155
  ],
  "rewards": [],
  "tasks": []
}
