tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BeeBreeding-AAAAAAAAAAAAAAAAAAAAEw==__Breedsomecommonb-AAAAAAAAAAAAAAAAAAAEXQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1117,
  "prerequisites": [
    500
  ],
  "properties": {
    "auto_claim": false,
    "desc": "To cross breed bees you need two different species of bees. One drone and one princess from different world-gen hives (Meadows and Forest as an example)\n\nBee Houses do not allow crossbreeding. You need an Apiary to crossbreed them to a new species. Certain frames will help this process. Shortening their lifespan means faster crosses. Increasing Mutation rate means getting mutations and thus rare bees quicker.\n\nCommon Bees produce Honey Combs every 2.2 minutes. Note that production times are an approximation based on the bee's base production speed and the product's rarity. They do not reflect actual production time.\n\nMake sure your bees are pure by checking their genetics with a Beealyzer or GT scanner.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Breed some common bees",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    500
  ],
  "rewards": [],
  "tasks": []
}
